# ANN_C-

./: CMakeLists.txt  README.md  实验报告.docx
digital_recognition/: bpnet.cpp  bpnet.h  data_input.cpp  data_input.h  layer.cpp  layer.h  main.cpp  utils.h
